Fixed the alignment for the navigation.

--- a/packages/client-mav/src/app/make-a-vis/legend-view/main/main.component.sass
+++ b/packages/client-mav/src/app/make-a-vis/legend-view/main/main.component.sass
@@ -5,6 +5,7 @@
     width: 50vw
     display: flex
     justify-content: space-between
+    margin-right: 2.6875rem
 
     .home-icon-wrapper
       display: flex
